viewports for cutoff fix

--- a/src/pages/Landing/styles.module.css
+++ b/src/pages/Landing/styles.module.css
@@ -619,6 +619,7 @@
   }
 
   .hero-left-inner {
+    margin-top: 6rem; 
     margin-bottom: 0;
   }
 
